--- a/neirong.html
+++ b/neirong.html
@@ -29,56 +29,50 @@
 			<caption><p style="font-size: 30px;margin-bottom: 5px;margin-top: 5px;">简&nbsp;·&nbsp;历</p></caption>
 			<tr>
 				<th width="50">姓名</th>
-				<td align="center" width="100">李煜</td>
+				<td align="center" width="100">your name</td>
 				<th width="50">出生年月</th>
-				<td align="center" width="100">1996年3月</td>
+				<td align="center" width="100">your birth</td>
 				<td width="60" rowspan="4">
-					<img width="100%" height="auto" src="./img/证件照suoxiao.png">
+					<img width="100%" height="auto" src="./img/your pic.png">
 				</td>
 			</tr>
 			<tr>
 				<th width="50">性别</th>
-				<td align="center" width="100">男</td>
+				<td align="center" width="100">your sex</td>
 				<th width="50">籍贯</th>
-				<td align="center" width="100">福建莆田</td>
+				<td align="center" width="100">your birth place</td>
 			</tr>
 			<tr>
 				<th width="50">学历</th>
-				<td align="center" width="100">本科</td>
+				<td align="center" width="100">your education background</td>
 				<th width="50">政治面貌</th>
-				<td align="center" width="100">中共党员</td>
+				<td align="center" width="100">...</td>
 			</tr>
 			<tr>
 				<th width="50">手机号码</th>
-				<td align="center" width="100">15927086342</td>
+				<td align="center" width="100">your phone num</td>
 				<th width="50">邮箱</th>
-				<td align="center" width="100">952700304@qq.com</td>
+				<td align="center" width="100">your email</td>
 			</tr>
 			<tr>
 				<th align="center" width="50">兴<br>趣<br>爱<br>好</th>
 				<td colspan="4" width="310">
-					<p style="margin-top: 5px;margin-bottom: 5px;">&emsp;&emsp;我的兴趣爱好比较广泛，比如手绘、唱歌、运动等。手绘是我从小养成的兴趣，从少年宫儿童画到后来的素描等，接触了一些
-						专业的训练，然后加上自己的绘画天赋还可以，所以临摹一直很拿手，也是比较自豪的一件事。唱歌是我后来培养的兴趣，因为喜欢一些歌手，比如王力宏、李荣浩等，然后自己平时也就哼着玩，觉得音感还可以，音域也蛮宽的，至少不会五音不全，所以很喜欢和同学去ktv。运动中最喜欢篮球，这是小学四年级受姨丈的影响，我开始看NBA，从此就深深地喜欢上这项运动。我个子不高，一米七出头吧，打篮球也没啥优势，但是我投篮特别准，所以我一直也是在投篮方面多加练习，精益求精。<br>&emsp;&emsp;除此之外，我还喜欢旅游、看书、游泳、看电影、用技术来实现一些小idea等。</p>
+					<p style="margin-top: 5px;margin-bottom: 5px;">your hobby</p>
 					</td>
 				</tr>
 				<tr>
 					<th align="center" width="50">技<br>术<br>学<br>习</th>
 					<td colspan="4" width="310">
 						<ul style="margin-bottom: 5px;margin-top: 5px;">
-							<li>C、C++、C#、Python、Java、.NET，前三种用的比较多，后三种平时有接触</li>
-							<li>ASP.NET、html、css、javascript、php等建站语言经常用</li>
-							<li>MySQL、Orcale、Sqlite等数据库用过</li>
-							<li>数据可视化的库用过d3、echarts、three.js</li>
-							<li>爬虫库用过request、scrapy</li>
+							<li>your tech.</li>
+							<li></li>
 						</ul>
 					</td>
 				</tr>
 				<tr>
 					<th align="center" width="50">自<br>我<br>评<br>价</th>
 					<td colspan="4" width="310">
-						<p style="margin-top: 5px;margin-bottom: 5px;">&emsp;&emsp;在生活中，我是一个比较随性，喜欢自由的大男孩。我喜欢利用空余时间做自己喜欢做的事情，比如出去打打球，在家练练吉他等；<br>
-							&emsp;&emsp;在工作中，我是一个严谨、勤奋、喜欢新鲜事物的学生。我很清楚自己想学什么，喜欢做什么样的工作，但是对于老师布置的任务，我还是会认真完成。我希望以后的职业可以是数据可视化、前端、数据挖掘中的一类或者相关。<br>
-						&emsp;&emsp;在家庭中，我是一个懂事，不让大人操心的孩子，同时我还有一个喜欢我哄的女朋友，现在我们住在一起，偶尔做做饭，吵吵架，生活还是挺有新鲜感的。</p>
+						<p style="margin-top: 5px;margin-bottom: 5px;">your personal evaluation</p>
 					</td>
 				</tr>
 			</table>
